Updated config and disruptions

--- a/app/component/navigation.scss
+++ b/app/component/navigation.scss
@@ -458,7 +458,7 @@ section.content {
   display: inline-block;
   line-height: 22px;
   font-size: 18px;
-  margin: 0px;
+  margin: 0 5px;
   padding: 0px 6px;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 4px;
