--- a/sass/themes/osijek/_theme.scss
+++ b/sass/themes/osijek/_theme.scss
@@ -11,6 +11,7 @@ $gray-blue: #78909c;
 $gray-blue-light: rgb(182, 193, 199);
 
 /* Operator palette */
+$osijek-blue: #285cab;
 $livi-blue: #00afff;
 $livi-gold: rgb(233, 171, 0);
 $livi-bus-blue: rgb(0, 136, 206);
@@ -24,7 +25,7 @@ $livi-tram-green: rgb(106, 137, 37);
 $background-color: #eef1f3;
 $background-color-darker: #e0e5e8;
 $background-color-lighter: #f4f4f5;
-$primary-color: $livi-blue;
+$primary-color: $osijek-blue;
 $primary-font-color: $white;
 $secondary-color: #008bde;
 $secondary-font-color: $white;
